--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
